--- a/src/components/task_card/task_card.module.scss
+++ b/src/components/task_card/task_card.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
-  padding: 15px;
+  padding: 0 15px;
   border: 1px solid black;
-  border-radius: 20px;
+  border-radius: 5px;
   width: 300px;
   display: flex;
   flex-direction: column;
@@ -11,21 +11,49 @@
   .header {
     min-height: 60px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    gap: 10px;
     width: 100%;
+
+
+    .date_input {
+      border-radius: 5px;
+      height: 30px;
+      padding: 5px;
+      width: 130px;
+    }
   }
 
   .main {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    gap: 15px;
     min-height: 100px;
     width: 100%;
-    p{
+
+    .title_block {
+
+      input {
+        border-radius: 5px;
+        height: 35px;
+        font-size: 16px;
+        width: 100%;
+        padding: 5px;
+      }
+    }
+
+    textarea {
+      border-radius: 5px;
+      padding: 5px;
+      font-size: 16px;
+    }
+
+    p {
 
     }
   }
+
   .footer {
     min-height: 60px;
     width: 100%;
@@ -33,4 +61,9 @@
     align-items: center;
     justify-content: space-between;
   }
+}
+
+.completed {
+  background-color: green;
+  color: white;
 }
