created slice Api

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -3,9 +3,14 @@
   border: none;
   cursor: pointer;
   background-color: inherit;
+  transition: all .3s;
 
   img {
     width: 35px;
     height: 35px;
+  }
+
+  &:hover {
+    transform: translateY(2px);
   }
 }
